{
    "name": "CarControlsMap",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "526d9aaa-6c17-4207-b48e-17efdbbbb11a",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "35b36a8f-d121-4a0f-bc90-9394b26f8d21",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Blinkers",
                    "type": "Value",
                    "id": "c8c8e907-f025-4bc5-b53e-a4efe465154a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "12a1fc95-5cc5-45b1-98ed-683542ff08b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "6bc0a53e-62b7-46ec-b32d-563822d542fc",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "67380460-1693-4977-b885-acb45c186445",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ff553857-1724-476a-88b2-30e0103f9957",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "forward",
                    "id": "d2099cfa-f924-485b-b22c-b70a6eebe82c",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "backward",
                    "id": "6abfdd13-a833-4e43-8e85-7655f8fa4084",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "4e36d719-704e-4222-81e5-95b370823649",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blinkers",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5b00f76f-3b63-43dd-afed-ed1b4631e20c",
                    "path": "<Keyboard>/#(U)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blinkers",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6b0767f0-a802-4c94-aac9-860ef60a3cd3",
                    "path": "<Keyboard>/#(Ä±)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blinkers",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ea387e95-a291-42b5-97a4-de1d590f2676",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}